# gbm_transient_search

./: .gitattributes  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
gbm_bkg_pipe/: __init__.py  balrog_handler.py  bkg_fit_handler.py  bkg_fit_remote_handler.py  configuration.py  handler.py  plots.py  report.py  trigger_search.py  upload.py
gbm_bkg_pipe/balrog/: fit_script.py
gbm_bkg_pipe/balrog/utils/: fit.py  fit_multi_peak.py  functions_for_auto_loc.py
gbm_bkg_pipe/data/bkg_model/: config_fit.yml  (+1 more)
gbm_bkg_pipe/exceptions/: custom_exceptions.py
gbm_bkg_pipe/handlers/: background.py  download.py  localization.py  plotting.py  report.py  transient_search.py  upload.py
gbm_bkg_pipe/phys_bkg_model/: config_fit.yml  config_fit_trigdat.yml  config_result_plot.yml  fit_phys_bkg.py
gbm_bkg_pipe/processors/: bkg_config_writer.py  change_point_detection.py  localization_result_reader.py  localization_setup.py  transient_detector.py
gbm_bkg_pipe/simulation/: transient_simulator.py
gbm_bkg_pipe/test/: test_download.py
gbm_bkg_pipe/utils/: arviz_plots.py  bkg_helper.py  bkg_result_reader.py  configuration.py  download_file.py  env.py  localization_handler.py  log.py  luigi_ssh.py  modify_html.py  package_data.py  plot_utils.py  plotting.py  result_reader.py  saa_calc.py  search.py  trigger_plot.py  upload_utils.py
gbm_transient_search/: __init__.py  _version.py
gbm_transient_search/handlers/: background.py  download.py  localization.py  plotting.py  report.py  transient_search.py  upload.py
gbm_transient_search/processors/: bkg_config_writer.py  bkg_result_reader.py  localization_result_reader.py  localization_setup.py  saa_calc.py  transient_detector.py
gbm_transient_search/utils/: configuration.py  download_file.py  env.py  log.py  luigi_ssh.py  modify_html.py  package_data.py  parse_fit_params.py  upload_utils.py
scripts/: balrog_tasks.job  balrog_tasks_array.job  balrog_tasks_parallel.job  close_master.sh  create_master.sh  download_ps_data.py  fit_background.py  fit_background_python.py  fit_background_saa.py  loc_triggers.sh  run_balrog.py  run_balrog_multi_interval.py  stan_fit_pipe.job
scripts/balrog/: fit.py
(+8 files in other folders)
