[metadata]
name = gbm_transient_search
description = The GBM Background pipeline
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/fkunzweiler/gbm_transient_search
author_email = fkunzwei@mpe.mpg.de
author = Felix Kunzweiler
requires_python = >=3.3.0
license = GPL-2+

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Physics

project_urls =
    Bug Tracker = https://github.com/fkunzweiler/gbm_transient_search/issues
    Source Code = https://github.com/fkunzweiler/gbm_transient_search


[options]
packages = find:
install_requires =
    numpy
    # python-telegram-bot
    pyyaml
    requests
    luigi
    astropy
    lxml
    pygcn
    matplotlib
    chainconsumer
    plotly
    sympy
    healpy
    seaborn
    h5py
    cython
    spherical_geometry
    gbmgeometry
    astromodels
#    gbm_drm_gen # has to be installed manually
    pymultinest
    tables
    configya
    ruptures
#   mpi4py # removed for travis

tests_require =
    pytest
    pytest-codecov


[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = --color=yes --cov=gbm_transient_search --cov-report=term -ra --ignore=gbm_bkg_pipe/test --ignore=gbm_bkg_pipe/_version.py
log_cli = 1
log_cli_level = DEBUG
testpaths = gbm_transient_search/test
norecursedirs = gbm_transient_search/test


[versioneer]
VCS=git
style=pep440
versionfile_source=gbm_transient_search/_version.py
versionfile_build=gbm_transient_search/_version.py
tag_prefix=v
parentdir_prefix=gbm_transient_search-
